--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,84 +31,77 @@
 
 /* NAVBAR */
 nav {
-  position: absolute;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, black), color-stop(102%, rgba(0, 0, 0, 0))), #00000000;
-  background: linear-gradient(black 10%, rgba(0, 0, 0, 0) 102%), #00000000;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 6px;
-  z-index: 1;
+  background-color: #000;
+}
+
+nav .navbar {
+  padding: 0.3rem 0.3rem;
 }
 
 nav .logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-right: auto;
-}
-
-nav .logo .logo__center {
-  max-width: 90px;
+  max-width: 85px;
   cursor: default;
 }
 
-nav .logo .logo__title {
-  color: #e7e8e9;
-  font-size: 2.4em;
+nav .navbar-brand {
+  font-size: 2.5em;
   font-weight: 400;
   font-family: 'Ninja Naruto', sans-serif;
   font-style: italic;
+  padding-top: 0.5rem;
+  padding-bottom: 0rem;
+  line-height: normal;
   letter-spacing: 2px;
-  text-transform: uppercase;
-  padding-top: 7px;
 }
 
-nav .navlinks .navlinks__list {
-  display: inline-block;
-  padding: 0px 20px;
+nav .navbar-collapse {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   text-transform: uppercase;
 }
 
-nav .navlinks .navlinks__list .navlinks__text {
+nav .navbar-collapse .navbar-nav {
   color: #e7e8e9;
   font-size: 18px;
   font-family: "Raleway", sans-serif;
   text-decoration: none;
   letter-spacing: 1px;
+}
+
+nav .navbar-collapse .navbar-nav .nav-link {
+  color: #f2f2f2e8;
+  padding-right: 1rem;
+  padding-left: 1rem;
   -webkit-transition: color .2s ease;
   transition: color .2s ease;
 }
 
-nav .navlinks .navlinks__list .navlinks__text:hover {
+nav .navbar-collapse .navbar-nav .nav-link:hover {
   color: #7a3c9e;
 }
 
-nav .navlinks .navlinks__list .navlinks__text--button {
-  color: #ff0024;
-  font-family: "Raleway", sans-serif;
-  text-decoration: none;
-  letter-spacing: 1px;
-  font-size: 18px;
-  font-weight: 500;
-  margin-left: 27px;
+nav .navbar-collapse .navbar-nav .nav-link:active {
+  color: #7a3c9e !important;
 }
 
-nav .navlinks .navlinks__list .active {
-  color: #7a3c9e !important;
+nav .navbar-collapse .navbar-nav .nav-button {
+  font-weight: 600;
+  color: #ff0024;
+  background-color: #f2f2f221;
+  border-radius: 30px;
+  margin-left: 1.5rem;
+  margin-right: 0.5rem;
+}
+
+nav .navbar-collapse .navbar-nav .nav-button:hover {
+  color: white;
 }
 
 /* INICIO */
 .bannerInicio {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(7%, black), color-stop(70%, rgba(0, 0, 0, 0))), url(../media/banner/bannerInicio.png);
-  background: linear-gradient(black 7%, rgba(0, 0, 0, 0) 70%), url(../media/banner/bannerInicio.png);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, black), color-stop(70%, rgba(0, 0, 0, 0))), url(../media/banner/bannerInicio.png);
+  background: linear-gradient(black 1%, rgba(0, 0, 0, 0) 70%), url(../media/banner/bannerInicio.png);
   height: 100vh;
   background-position: center;
   background-size: cover;
@@ -662,91 +655,6 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
 
 /* MEDIA QUERIES */
 @media (min-width: 576px) and (max-width: 768px) {
-  nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    position: absolute;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, black), color-stop(102%, rgba(0, 0, 0, 0))), #00000000;
-    background: linear-gradient(black 10%, rgba(0, 0, 0, 0) 102%), #00000000;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 6px;
-    z-index: 1;
-  }
-  nav .logo {
-    margin: 0px;
-  }
-  nav .logo .logo__center {
-    max-width: 120px;
-    cursor: default;
-  }
-  nav .logo .logo__title {
-    display: none;
-    color: #e7e8e9;
-    font-size: 2.4em;
-    font-weight: 400;
-    font-family: 'Ninja Naruto', sans-serif;
-    font-style: italic;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    padding-top: 7px;
-  }
-  nav .navlinks {
-    padding-left: 0px;
-    padding-top: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  nav .navlinks .navlinks__list {
-    display: inline-block;
-    text-transform: uppercase;
-  }
-  nav .navlinks .navlinks__list .navlinks__text {
-    color: #e7e8e9;
-    font-size: 2em;
-    font-family: "Raleway", sans-serif;
-    text-decoration: none;
-    -webkit-transition: color .2s ease;
-    transition: color .2s ease;
-  }
-  nav .navlinks .navlinks__list .navlinks__text:hover {
-    color: #7a3c9e;
-  }
-  nav .navlinks .navlinks__list .navlinks__text--button {
-    color: #ff0024;
-    font-family: "Raleway", sans-serif;
-    text-decoration: none;
-    letter-spacing: 1px;
-    font-size: 2em;
-    font-weight: 500;
-    margin: 0px;
-  }
-  nav .navlinks .navlinks__list .active {
-    color: #7a3c9e !important;
-  }
   .containerinicio {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -985,75 +893,6 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
 }
 
 @media (min-width: 768px) and (max-width: 992px) {
-  nav {
-    position: absolute;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, black), color-stop(102%, rgba(0, 0, 0, 0))), #00000000;
-    background: linear-gradient(black 10%, rgba(0, 0, 0, 0) 102%), #00000000;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 6px;
-    z-index: 1;
-  }
-  nav .logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  nav .logo .logo__center {
-    max-width: 90px;
-    cursor: default;
-  }
-  nav .logo .logo__title {
-    display: none;
-    color: #e7e8e9;
-    font-size: 2.4em;
-    font-weight: 400;
-    font-family: 'Ninja Naruto', sans-serif;
-    font-style: italic;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    padding-top: 7px;
-  }
-  nav .navlinks {
-    margin-top: 10px;
-  }
-  nav .navlinks .navlinks__list {
-    display: inline-block;
-    padding: 0px 20px;
-    text-transform: uppercase;
-  }
-  nav .navlinks .navlinks__list .navlinks__text {
-    color: #e7e8e9;
-    font-size: 18px;
-    font-family: "Raleway", sans-serif;
-    text-decoration: none;
-    letter-spacing: 1px;
-    -webkit-transition: color .2s ease;
-    transition: color .2s ease;
-  }
-  nav .navlinks .navlinks__list .navlinks__text:hover {
-    color: #7a3c9e;
-  }
-  nav .navlinks .navlinks__list .navlinks__text--button {
-    color: #ff0024;
-    font-family: "Raleway", sans-serif;
-    text-decoration: none;
-    letter-spacing: 1px;
-    font-size: 18px;
-    font-weight: 500;
-    margin-left: 3px;
-  }
-  nav .navlinks .navlinks__list .active {
-    color: #7a3c9e !important;
-  }
   .containerinicio {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1275,76 +1114,6 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
 }
 
 @media (min-width: 992px) and (max-width: 1200px) {
-  nav {
-    position: absolute;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, black), color-stop(102%, rgba(0, 0, 0, 0))), #00000000;
-    background: linear-gradient(black 10%, rgba(0, 0, 0, 0) 102%), #00000000;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 6px;
-    z-index: 1;
-  }
-  nav .logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-right: 200px;
-  }
-  nav .logo .logo__center {
-    max-width: 90px;
-    cursor: default;
-  }
-  nav .logo .logo__title {
-    display: none;
-    color: #e7e8e9;
-    font-size: 2.4em;
-    font-weight: 400;
-    font-family: 'Ninja Naruto', sans-serif;
-    font-style: italic;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    padding-top: 7px;
-  }
-  nav .navlinks {
-    margin-top: 10px;
-  }
-  nav .navlinks .navlinks__list {
-    display: inline-block;
-    padding: 0px 20px;
-    text-transform: uppercase;
-  }
-  nav .navlinks .navlinks__list .navlinks__text {
-    color: #e7e8e9;
-    font-size: 18px;
-    font-family: "Raleway", sans-serif;
-    text-decoration: none;
-    letter-spacing: 1px;
-    -webkit-transition: color .2s ease;
-    transition: color .2s ease;
-  }
-  nav .navlinks .navlinks__list .navlinks__text:hover {
-    color: #7a3c9e;
-  }
-  nav .navlinks .navlinks__list .navlinks__text--button {
-    color: #ff0024;
-    font-family: "Raleway", sans-serif;
-    text-decoration: none;
-    letter-spacing: 1px;
-    font-size: 18px;
-    font-weight: 500;
-    margin-left: 27px;
-  }
-  nav .navlinks .navlinks__list .active {
-    color: #7a3c9e !important;
-  }
   .containerinicio {
     display: -webkit-box;
     display: -ms-flexbox;
