--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,6 +52,7 @@ nav .navbar-brand {
   padding-bottom: 0rem;
   line-height: normal;
   letter-spacing: 2px;
+  cursor: default;
 }
 
 nav .navbar-collapse {
@@ -81,21 +82,37 @@ nav .navbar-collapse .navbar-nav .nav-link:hover {
   color: #7a3c9e;
 }
 
-nav .navbar-collapse .navbar-nav .nav-link:active {
-  color: #7a3c9e !important;
-}
-
 nav .navbar-collapse .navbar-nav .nav-button {
-  font-weight: 600;
   color: #ff0024;
   background-color: #f2f2f221;
+  font-weight: 600;
   border-radius: 30px;
   margin-left: 1.5rem;
   margin-right: 0.5rem;
 }
 
 nav .navbar-collapse .navbar-nav .nav-button:hover {
-  color: white;
+  color: #7a3c9e;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link .active {
+  color: #7a3c9e;
+}
+
+.navbar-dark .navbar-toggler {
+  color: transparent;
+  border-color: transparent;
+}
+
+.navbar-toggler {
+  font-size: 1.5rem;
+}
+
+.navbar-dark .navbar-nav .active > .nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show > .nav-link {
+  color: #7a3c9e;
 }
 
 /* INICIO */
@@ -173,17 +190,6 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 
 .containerinicio .containerinicio__text .containerinicio__p {
   font-size: 1.8em;
-}
-
-.containerinicio::before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  background: -webkit-gradient(linear, left bottom, left top, from(#2f1b31), to(transparent));
-  background: linear-gradient(to top, #2f1b31, transparent);
-  z-index: 1000;
 }
 
 .containerpelea {
@@ -416,17 +422,6 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
   font-size: 1.4em;
 }
 
-#historia::before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  background: -webkit-gradient(linear, left bottom, left top, from(#30343d), to(transparent));
-  background: linear-gradient(to top, #30343d, transparent);
-  z-index: 1000;
-}
-
 #carrousel {
   background: #2b2f38;
   margin-bottom: 30px;
@@ -475,17 +470,6 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
           transform: scale(1.1);
   -webkit-transition: 0.5s;
   transition: 0.5s;
-}
-
-.backgroundGaleria::before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  background: -webkit-gradient(linear, left bottom, left top, from(#111110), to(transparent));
-  background: linear-gradient(to top, #111110, transparent);
-  z-index: 1000;
 }
 
 /* UNIRSE */
@@ -654,7 +638,7 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
 }
 
 /* MEDIA QUERIES */
-@media (min-width: 576px) and (max-width: 768px) {
+@media (min-width: 403px) and (max-width: 768px) {
   .containerinicio {
     display: -webkit-box;
     display: -ms-flexbox;
