--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -45,6 +45,7 @@ nav{
         padding-bottom: 0rem;
         line-height: normal;
         letter-spacing: 2px;
+        cursor: default;
     }
     .navbar-collapse{
         justify-content: flex-end;
@@ -63,29 +64,40 @@ nav{
                 &:hover{
                     color: rgb(122, 60, 158);
                 }
-                &:active{
-                    color: rgb(122, 60, 158) !important;
-                }
             }
             .nav-button{
-                font-weight: 600;
                 color: #ff0024;
                 background-color: #f2f2f221;
+                font-weight: 600;
                 border-radius: 30px;
                 margin-left: 1.5rem;
                 margin-right: 0.5rem;
                 &:hover{
-                    color: rgb(255, 255, 255);
+                    color: rgb(122, 60, 158);
                 }
             }
         }
     }
 }
 
+.navbar-expand-lg .navbar-nav .nav-link .active{
+    color: rgb(122, 60, 158);
+}
+.navbar-dark .navbar-toggler {
+    color: transparent;
+    border-color: transparent;
+}
 
-// .active{
-//     color: rgb(122, 60, 158) !important;
-// }
+.navbar-toggler{
+    font-size: 1.5rem;
+}
+
+.navbar-dark .navbar-nav .active>.nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show>.nav-link {
+    color:rgb(122, 60, 158);
+}
 
 /* INICIO */
 
@@ -127,15 +139,6 @@ nav{
             font-size: $sizetext;
         }
     }
-}
-.containerinicio::before{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(to top,#2f1b31,transparent);
-    z-index: 1000;
 }
 
 .containerpelea{
@@ -269,16 +272,6 @@ nav{
     }
 }
 
-#historia::before{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(to top,#30343d,transparent);
-    z-index: 1000;
-}
-
 #carrousel{
     background: rgb(43,47,56);
     margin-bottom: 30px;
@@ -317,16 +310,6 @@ nav{
             }
         }
     }
-}
-
-.backgroundGaleria::before{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    background: linear-gradient(to top,#111110,transparent);
-    z-index: 1000;
 }
 
 /* UNIRSE */
@@ -455,7 +438,7 @@ footer{
 
 /* MEDIA QUERIES */
 
-@media (min-width: 576px) and (max-width: 768px){
+@media (min-width: 403px) and (max-width: 768px){
     .containerinicio{
         display: flex;
         flex-direction: column;
@@ -724,7 +707,7 @@ footer{
     }
     .backgroundGaleria .containergaleria .containergaleria__img {
         width: 680px;
-      }
+    }
 }
 
 @media (min-width: 992px) and (max-width: 1200px){
